--- a/notebooks/Predictive Models.ipynb
+++ b/notebooks/Predictive Models.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# CS506 Final Project - Predictive Models\n",
     "\n",
-    "### Author: Ania Shaheed"
+    "### Author: Ania Shaheed "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 2,
    "id": "ad85492e-a908-4d4d-a2f4-5fb1e845bb70",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 9,
    "id": "307550fc-172f-4a7e-93b0-e6d54666fbe8",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 10,
    "id": "d2c611b7-c113-4a13-9eca-10b026925d26",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 11,
    "id": "cb5862dc-da03-4f45-a835-addccc3827a1",
    "metadata": {},
    "outputs": [],
@@ -133,11 +133,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "44e2e1f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_feature_importance(X, y, title='Feature Importance', n_top=15):\n",
+    "    # Train Random Forest\n",
+    "    rf = RandomForestRegressor(n_estimators=200, random_state=42)\n",
+    "    rf.fit(X, y)\n",
+    "    \n",
+    "    # Get feature importances\n",
+    "    importances = rf.feature_importances_\n",
+    "    feat_importance = pd.DataFrame({\n",
+    "        'feature': X.columns,\n",
+    "        'importance': importances\n",
+    "    }).sort_values(by='importance', ascending=False).head(n_top)\n",
+    "    \n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(10,6))\n",
+    "    sns.barplot(x='importance', y='feature', data=feat_importance, palette='viridis')\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel('Importance')\n",
+    "    plt.ylabel('Feature')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6914ae6f-50b9-48d2-afde-4b7da803b395",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Food Access vs. Food Insecurity\n",
     "\n",
@@ -169,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 3,
    "id": "b1a4ef1a-dd36-4a02-887e-d06b3881a6fb",
    "metadata": {},
    "outputs": [],
@@ -508,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 7,
    "id": "3784ea7a-cfc1-45fd-aa56-ff2331e2eae0",
    "metadata": {},
    "outputs": [],
@@ -1066,19 +1093,11 @@
     "# plot results\n",
     "plot_model_comparison(results, 'r2', 'Link 2: R² Comparison')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "794910fc-4cd9-4da4-947a-c39da0984f5b",
-   "metadata": {},
-   "source": [
-    "### Extracting Indicators"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
